# qat-llm

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  REAL_QUANTIZATION_GUIDE.md  demo_quantization.py  pyproject.toml
src/qat_llm/: __init__.py  calibration.py  cli.py  compare.py  export.py  fake_quant.py  ptq.py  quantization_comparison.py  real_quant.py  utils.py
tests/: test_export.py  test_fake_quant.py  test_ptq.py  test_real_quant.py  test_utils.py
